--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,5 @@ spring.application.name=social-ecommerce
 logging.level.org.springframework.security=TRACE
 
 
-spring.security.oauth2.client.registration.google.client-id=431910344887-5hkqq3ohlntvgq2af3u9m2pfgt4scf6t.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
