--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ logging.level.org.springframework.security=TRACE
 
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+
+
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
