--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 
 
+spring.oauth.redirect-uri=${OAUTH_REDIRECT_URI}
+
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
